# ygege

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  DISCLAIMER-fr.md  DISCLAIMER.md  DOCKER_HUB_DESCRIPTION.md  DockerFile  Dockerfile  FIX_LEAKED_IP_ISSUE.md  LICENCE  README-en.md  README-fr.md  README.md  SECURITY.md  build-and-test.sh  categories.json  compose.yml  create-release.sh  docker-compose-flaresolverr.yml  docker-compose.test.yml  docker-compose.yml  dockerignore  exctractor.js  flake.nix  release-notes.md  ygege-en.yml  ygege-fr.yml  ygege.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  issue_report.yml  question.yml
.github/workflow/: build.yml
.github/workflows/: artifact-comment.yml  auto-tag.yml  build.yml  ci.yml  codeql.yml  conflict_labeler.yml  deploy-docs.yml  docker-build.yml  docker-fork.yml  docker-release.yml  preview.yml  release.yml
compiling/: compile-releases.sh
docker/: .dockerignore  Dockerfile  compose.yml
docs/: api-documentation-fr.md  api-documentation.md  building-from-source-fr.md  building-from-source.md  ci_implementation-fr.md  ci_implementation.md  contribution-fr.md  contribution.md  docker-dev-fr.md  docker-dev.md  docker-guide-fr.md  docker-guide.md  preview_workflow-fr.md  preview_workflow.md  release_workflow-fr.md  release_workflow.md  source-guide-fr.md  source-guide.md  tmdb-imdb-fr.md  tmdb-imdb.md
scripts/: compile-releases.sh  cross-compile-linux-armv7.sh
src/: auth.rs  categories.rs  client.rs  config.rs  dbs.rs  domain.rs  flaresolverr.rs  main.rs  nostr.rs  parser.rs  rate_limiter.rs  resolver.rs  rest.rs  search.rs  tmdb.rs  user.rs  utils.rs  ygg_client.rs
src/rest/: auth.rs  bench.rs  categories.rs  client_extractor.rs  homepage.rs  index.html  infos.rs  mod.rs  search.rs  torrent.rs  user.rs
src/static/: index-fr.html  index.html
website/: README.md  docusaurus.config.ts  package.json  sidebars.ts
website/docs/: api.md  configuration.md  faq.md  getting-started.md  intro.md  tmdb-imdb.md
website/docs/developer/: ci-implementation.md  contributing.md  preview-workflow.md  release-workflow.md
website/docs/installation/: binary-guide.md  docker-guide.md  source-guide.md  swizzin-guide  swizzin-guide.md
website/docs/integrations/: _category_.json  jackett.md  prowlarr.md
website/i18n/en/: code.json
website/src/css/: custom.css
website/static/: CNAME
(+21 files in other folders)
