[package]
name = "ygege"
version = "0.9.0"
edition = "2024"

[dependencies]
actix-web = "4"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
log = "0.4"
pretty_env_logger = "0.5"
qstring = "0.7.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
secp256k1 = { version = "0.31.1", features = ["global-context"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2"
tokio-socks = "0.5"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
