[package]
name = "ygege"
version = "0.9.0"
edition = "2024"

[dependencies]
actix-web = "=4.13.0"
futures = "=0.3.32"
futures-util = "=0.3.32"
hex = "=0.4.3"
log = "=0.4.29"
pretty_env_logger = "=0.5"
qstring = "=0.7.2"
reqwest = { version = "=0.13.2", default-features = false, features = ["json", "rustls", "gzip"] }
secp256k1 = { version = "=0.31.1", features = ["global-context"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
tokio = { version = "=1.50.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "=2.5.8"
tokio-socks = "=0.5.2"
tokio-tungstenite = { version = "=0.28.0", features = ["rustls-tls-native-roots"] }
urlencoding = "=2.1.3"
uuid = { version = "=1.22.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
 